# Real-Time-Car-Tracking-and-Speed-Estimation-with-OpenCV-Manual-Initialization-

./: CMakeLists.txt  CarTracker.cpp  CarTracker.hpp  Makefile  README.md  Structure  main.cpp  readme
